test/modules/use/parentSymRequiresUse.good
parentSymRequiresUse.chpl:4: error: 'xyz' undeclared (first use this function)
